force-app/main/default/objects/DebtCollection__c/DebtCollection__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DebtCollection</label>
</CustomObject>