force-app/main/default/objects/DebtCollection__c/fields/BatchLimit__c.field-meta.xml
<CustomField>
    <fullName>BatchLimit__c</fullName>
    <label>BatchLimit</label>
    <length>5</length>
    <type>Text</type>
</CustomField>