force-app/main/default/objects/DebtCollection__c/fields/CBBatchLimit__c.field-meta.xml
<CustomField>
    <fullName>CBBatchLimit__c</fullName>
    <label>CB Batch Limit</label>
    <length>5</length>
    <type>Text</type>
</CustomField>