force-app/main/default/objects/DebtCollection__c/fields/EmailCC__c.field-meta.xml
<CustomField>
    <fullName>EmailCC__c</fullName>
    <label>EmailCC</label>
    <type>Email</type>
</CustomField>